@@ -1,17 +1,24 @@
-# An example script to show how to output a sine wave using a DAC.
-# Because we have to do it all in software, there are limitations on how fast
-# we can update the DAC. Update intervals faster than 5 ms may give weird
-# results because of the large percentage of missed updates.
-#
-# Note: This example uses signal.setitimer() and signal.alarm(), and therefore
-# requires Python 2.6 on Unix to run. See:
-#     http://docs.python.org/library/signal.html#signal.setitimer
-#     http://docs.python.org/library/signal.html#signal.alarm
-#
-# When changing the update interval and frequency, consider how your values
-# effect the waveform. A slow update interval coupled with a fast frequency
-# can result in strange behavior. Try to keep the period (1/frequency) much
-# greater than update interval.
+"""
+Demonstrates how to output a sine wave using a DAC. Since we have to do it all
+in software, there are limitations on how fast we can update the DAC. Update
+intervals faster than 5 ms may give weird results because of the large
+percentage of missed updates.
+
+Note: This example uses signal.setitimer() and signal.alarm(), and requires
+Python 2.6 on Unix (Linux and Mac) to run. See:
+
+    http://docs.python.org/library/signal.html#signal.setitimer
+    http://docs.python.org/library/signal.html#signal.alarm
+
+For a full cross-platform (Linux, Mac and Windows) example, look at the
+outputSinDac.py example.
+
+When changing the update interval and frequency, consider how your values effect
+the waveform. A slow update interval coupled with a fast frequency can result in
+strange behavior. Try to keep the period (1/frequency) much greater than update
+interval.
+
+"""
 
 import math # For sin function
 import os # For name
@@ -33,9 +40,9 @@ UPDATE_INTERVAL = 0.005
 # The frequency of the sine wave, in Hz
 FREQUENCY = 10
 
+
 if __name__ == '__main__':
     print("This program will attempt to generate a sine wave with a frequency of %s Hz, updating once every %s seconds." % (FREQUENCY, UPDATE_INTERVAL))
-
 
     print("Opening LabJack...",)
     # Open up our LabJack
@@ -44,6 +51,7 @@ if __name__ == '__main__':
     #d = ue9.UE9()
 
     print("Done")
+
 
     # Make a class to keep track of variables and the like
     class DacSetter(object):
@@ -84,6 +92,7 @@ if __name__ == '__main__':
             # setDacCount measures how many times the timer went off.
             self.setDacCount += 1
 
+
     # Create our DacSetter
     dacs = DacSetter(FREQUENCY, UPDATE_INTERVAL)
 
@@ -101,7 +110,7 @@ if __name__ == '__main__':
         # Wait for signal to be received
         signal.pause()
 
-        # If the dacs flag is set, set the dac.
+        # If the dacs flag is set, set the DAC.
         if dacs.go:
             dacs.setDac()
 
